<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AndWell!</string>
    <string name="app_name">Well for Android</string>
    <string name="refresh_all">Refresh All</string>
    <string name="refresh">Refresh</string>
    <string name="jumpto">Jump To</string>
    <string name="jumpto_withid">Jump To: </string>
    <string name="authcode_label">Authorization Code:</string>
    <string name="getauthcode_btn">Get Authorization Code</string>
    <string name="loginoauth_btn">Login with OAuth</string>
    <string name="label_server_api">Server API:</string>
    <string name="text_server_api_hint">e.g. http://www.example.com/</string>
    <string name="text_auth_code_hint">e.g. 12345678</string>
    <string name="label_status">Welcome!</string>
    <string name="app_shortname">AndWell</string>
    <string name="bPrev">Prev</string>
    <string name="bNext_caption">Next</string>
    <string name="bUp_caption">Former</string>
    <string name="bDown_caption">Later</string>
    <string name="new_postlist">New Post</string>
    <string name="new_postlist_short">Post</string>
    <string name="newpost_title_label">Title:</string>
    <string name="newpost_post">Post</string>
    <string name="newpost_cancel">Cancel</string>
    <string name="newpost_qmd_label">&quot;Qmd#&quot;</string>
    <string name="newpost_anony">Anonymous</string>
    <string name="postlist_contextmenu_reply">Reply</string>
    <string name="postlist_contextmenu_rreply">R Mode Reply</string>
    <string name="postlist_contextmenu_rreply_short">R Reply</string>
    <string name="postview_menu_reply">Reply</string>
    <string name="postview_menu_RReply">R Mode Reply</string>
    <string name="postview_menu_rreply_short">R Reply</string>
    <string name="postview_menu_threadfirst">First post in the thread</string>
    <string name="postview_menu_threadfirst_short">Thread First</string>
    <string name="postview_menu_threadfirstnew">First New</string>
    <string name="logincode_btn">Login with authorization code</string>
    <string name="empty_server_api">Please input server API</string>
    <string name="log_in">Log In</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="already_first_post">You are at the start of the history.</string>
    <string name="input_post_id">Please input post ID</string>
    <string name="fail_to_load_boards">failed to load boards: </string>
    <string name="illegal_reply">illegal reply from server</string>
    <string name="fail_to_load_posts">failed to load posts: </string>
    <string name="postlist_more">Load more posts</string>
    <string name="postlist_update">Load new posts</string>
    <string name="no_new_post">No new post</string>
    <string name="at_thread_tail">You are at the tail of the thread</string>
    <string name="at_thread_head">You are at the head of the thread</string>
    <string name="no_more_post">No more post</string>
    <string name="fail_to_load_post">Failed to load post: </string>
    <string name="error_with_msg">Error: </string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="quoting_post">Quoting post&#8230;</string>
    <string name="loading_posts">Loading posts&#8230;</string>
    <string name="got_next_post_id">Got next post id&#8230;</string>
    <string name="loading_next_post">Loading next post&#8230;</string>
    <string name="loading_boards">Loading boards&#8230;</string>
    <string name="jumpto_title">Please input</string>
    <string name="qmd_random">Random</string>
    <string name="qmd_none">None</string>
    <string name="mainmenu_boards">Boards</string>
    <string name="mainmenu_favboards">Favourite Boards</string>
    <string name="mainmenu_logout">Logout</string>
    <string name="userinfo_updated">User info updated</string>
    <string name="userinfo_update_fail">Fail to update user info</string>
    <string name="newpost_posting">Posting&#8230;</string>
    <string name="please_input_post_title">Please input title</string>
    <string name="posted">Posted.</string>
    <string name="loading_post">Loading post&#8230;</string>
    <string name="favboards">Favourite Boards</string>
    <string name="allboards">All Boards</string>
</resources>
